# dna-origami-autoencoder

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_README.md  Dockerfile  Dockerfile.simple  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_GENERATION_ENHANCEMENTS_SUMMARY.md  PROJECT_CHARTER.md  README.md  README_PRODUCTION.md  RESEARCH_PUBLICATION.md  SAFETY.md  SDLC_IMPLEMENTATION_COMPLETE.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  api_server.py  automation_system.py  benchmark_results.md  build_system.py  compliance_report.json  container-security-baseline.json  demo_cli.py  deploy.sh  (+40 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: environment.json  logging.json  monitoring.json
deployment/: agent_mesh_xr_production.py  autonomous_sdlc_deployment.py  production_deployment.py
dna_origami_ae/: __init__.py  cli.py
dna_origami_ae/api/: __init__.py  middleware.py  models.py  routes.py  server.py
dna_origami_ae/decoding/: __init__.py  transformer_decoder.py
dna_origami_ae/design/: __init__.py  origami_designer.py  routing_algorithm.py  shape_library.py
dna_origami_ae/encoding/: __init__.py  adaptive_encoder.py  biological_constraints.py  compression.py  error_correction.py  image_encoder.py
dna_origami_ae/mesh/: __init__.py  mesh_coordinator.py
dna_origami_ae/models/: __init__.py  dna_sequence.py  image_data.py  origami_structure.py  simulation_data.py
dna_origami_ae/optimization/: __init__.py  integration_optimizer.py
dna_origami_ae/reliability/: __init__.py  circuit_breaker.py  fault_tolerance.py
dna_origami_ae/research/: __init__.py  adaptive_learning.py  autonomous_optimization.py  benchmark_suite.py  edge_computing_framework.py  novel_algorithms.py  quantum_enhanced_encoder.py
dna_origami_ae/scaling/: __init__.py  auto_scaler.py  load_balancer.py
dna_origami_ae/security/: advanced_security.py  threat_detection.py
dna_origami_ae/simulation/: __init__.py  force_field.py  md_simulator.py  origami_simulator.py
dna_origami_ae/utils/: __init__.py  adaptive_scaling.py  advanced_caching.py  advanced_error_handling.py  advanced_logging.py  advanced_validation.py  ai_agents.py  autonomous_monitoring.py  cache.py  compliance.py  concurrent_processing.py  distributed.py  error_handling.py  gpu_acceleration.py  health_monitoring.py  helpers.py  i18n.py  logger.py  memory_optimizer.py  monitoring.py  parallel.py  performance.py  performance_optimized.py  performance_optimizer.py  platform.py  quantum_acceleration.py  security.py  validators.py
dna_origami_ae/wetlab/: __init__.py  imaging_processor.py  plate_designer.py  protocol_generator.py
dna_origami_ae/xr/: __init__.py  agent_xr_interface.py  mesh_visualizer.py
docs/: API_DOCS.md  DEPLOYMENT.md  RESEARCH_SUMMARY.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-architecture-decision-record-template.md  0002-sdlc-checkpointed-implementation.md
docs/deployment/: README.md
docs/monitoring/: README.md  health-checks.md
docs/runbooks/: README.md
docs/testing/: README.md
docs/workflows/: README.md  workflow-templates.py
docs/workflows/examples/: ci.yml
examples/: __init__.py  complete_pipeline.py
monitoring/: observability_stack.py
monitoring/grafana/datasources/: prometheus.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
requirements/: dev.txt  md.txt  ml.txt
scripts/: deploy_production.py  quality_gates.py
scripts/automation/: update_dependencies.py
scripts/metrics/: collect_metrics.py
tests/: __init__.py  conftest.py  test_config.py  test_encoding.py  test_gpu_performance.py  test_models.py
tests/fixtures/: .gitkeep
tests/integration/: __init__.py  test_optimization_integration.py  test_pipeline_integration.py
tests/performance/: __init__.py  test_benchmarks.py  test_performance_benchmarks.py
tests/security/: test_security_validation.py
tests/unit/: __init__.py  test_example.py
